--- a/css/style.css
+++ b/css/style.css
@@ -56,25 +56,12 @@ body{
 	background-attachment:fixed;
 	background-size: 100%;
 }
-.affix {
-    top: 0;
-    padding-top: -10px;
-    width: 100%;
-    z-index:10;
-
-}
-.affix + .container-fluid {
-    padding-top: 10px;
-}
 .center {
     text-align: center;
     display:inline-block;
     float: none;
     padding-top: 145px;
 }
-
-
-
 .navbar-header {
     position:relative;
     z-index:1000;
@@ -122,10 +109,40 @@ body{
     color: #C0B7B5 !important;
     background-color: #130d06;
 }
-
+.menu-bar{
+    padding-top: 0px;
+    padding-bottom: 0px;
+    border-radius: 0;
+    margin-bottom: 0px;
+    font-size: 18px;
+    text-align: center;
+    letter-spacing: 2px;
+    background-color: white;
+}
+.menu-bar li{
+   display: inline;
+}
+.menu-bar li a{
+    color: #352618 !important;
+    font-family: segan;
+    font-weight: 900;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-bottom:-10px; 
+    display: inline;  
+    padding-bottom: 20px;
+    padding-top: 20px;
+    border-radius: 20px;
+}
+.menu-bar li a:hover{
+   color: #fff !important;
+   text-decoration: none;
+   background-color: #130d06;
+}
 .current a{
 	background-image: url('../imagens/pao.png');
-	background-size: 60px 35px;
+	background-size: 55px 35px;
+    background-position: 0% 40%;
 	background-repeat: no-repeat;
 
 }
@@ -212,8 +229,24 @@ h1{
     color:#fff;
     width:95%;
 }
+.btn-contato{
+    border-radius:0;
+    border:1px solid #130d06;
+    background-color:#fff;
+    padding:20px;
+    margin:auto;
+    color:#000;
+    width:100%;    
+}
 .form-inline{
     width:100%;
+}
+
+.form-group{
+    width:100%;
+}
+.form-horizontal{
+    margin-right: -30px;
 }
 .input{
     border:1px solid #130d06;
@@ -252,9 +285,27 @@ h1{
 }
 
 .map {
-       padding-bottom: 5%;
+    padding-bottom: 5%;
+    margin-top: 20px;
     background-color:#130d06;
     color:#fff;
+}
+.img-carousel{
+    width: 100%;
+}
+#menu-bar {
+    position: fixed;
+    top: -200px;
+    width: 100%;
+    transition: top 0.5s ease 0s;
+    -webkit-transition: top 0.5s ease 0s;
+    -moz-transition: top 0.5s ease 0s;
+    -o-transition: top 0.5s ease 0s;
+    z-index:100000;
+    background: #fff;
+    border-bottom: 1px solid #bfb9b5;
+    padding: 20px;
+    color: #fff;
 }
 
 @media only screen and (max-width: 400px) {
