--- a/ninja/css/ninjachat.css
+++ b/ninja/css/ninjachat.css
@@ -26,9 +26,61 @@
 	margin-top: 20%;
 }
 input{
-	padding: 10px;
-	margin:10px;
+	font-size:50px;
+	padding: 30px;
+	margin:25px;
 	border:1px solid #ddd;
-	width: 70%;
+	width: 80%;
+	margin-left: 10%;
+}
+input[type="submit"]{
+	border:1px solid #000;
+	background-color: white;
+}
+p{
+	margin-left: 10%;
+	font-size:41px;
+	margin-bottom: 120px;
+	margin-top: 70px;
+}
+h2 {
+   width: 80%; 
+   font-size: 40px;
+   text-align: center; 
+   border-bottom: 1px solid #000; 
+   line-height: 0.1em;
+   margin-left: 10%;
+} 
+
+h2 span { 
+    background:#fff; 
+    padding:0 15px; 
+}
+.fbLogin{
+	margin-left: 10%;
+	padding: 10px;
+	border:1px solid #4d74c6;
+	background-color: #4d74c6;
+	color:white;
+	font-size: 35px;
+	width: 80%;
+	margin-top: 70px;
+}
+button>p{
+	font-size: 41px;
+	margin-left:-100px;	
+	margin-top:15px;
+	margin-bottom: 0;
+}
+.fbImg{
+	float:left;
 	margin-left: 15%;
+}
+hr{
+	margin-top: 100px;
+	width: 110%;
+	margin-bottom: -35px;
+}
+.signup{
+	margin-left: 20%;
 }
