--- a/ninja/css/ninjachat.css
+++ b/ninja/css/ninjachat.css
@@ -21,12 +21,20 @@
 	padding-bottom: 1000px;
 	background-color: #211f1f;
 }
+@media(min-height: 550px){
+	img.imgLog{
+		width: 60%;
+		height: 250px;
+	}
+	.fbLogin{
+	}
+}
 .loginImage{
 	margin-left: 20%;
-	margin-top: 10;
+	margin-top: 20;
 }
 input{
-	font-size:50px;
+	font-size:42px;
 	padding: 30px;
 	margin:25px;
 	border:1px solid #ddd;
@@ -35,7 +43,8 @@ input{
 }
 input[type="submit"]{
 	border:1px solid #000;
-	background-color: white;
+	background-color: #211f1f;
+	color: white;
 }
 p{
 	margin-left: 10%;
@@ -43,18 +52,27 @@ p{
 	margin-bottom: 120px;
 	margin-top: 70px;
 }
-h2 {
-   width: 80%; 
-   font-size: 40px;
-   text-align: center; 
-   border-bottom: 1px solid #000; 
-   line-height: 0.1em;
-   margin-left: 10%;
-} 
-
-h2 span { 
-    background:#fff; 
-    padding:0 15px; 
+h1 {
+    overflow: hidden;
+    text-align: center;
+}
+h1:before,
+h1:after {
+    background-color: #000;
+    content: "";
+    display: inline-block;
+    height: 1px;
+    position: relative;
+    vertical-align: middle;
+    width: 37%;
+}
+h1:before {
+    right: 0.5em;
+    margin-left: -50%;
+}
+h1:after {
+    left: 0.5em;
+    margin-right: -50%;
 }
 .fbLogin{
 	margin-left: 10%;
@@ -65,7 +83,6 @@ h2 span {
 	font-size: 35px;
 	width: 80%;
 	margin-top: 70px;
-	margin-bottom: 120px;
 }
 button>p{
 	font-size: 41px;
@@ -90,5 +107,7 @@ hr{
 	position: fixed;
 }
 .signupdiv{
-	margin-bottom: 0;
+	position: absolute;
+	width: 100%;
+	bottom: 0;
 }
