--- a/ninja/css/ninjachat.css
+++ b/ninja/css/ninjachat.css
@@ -138,7 +138,7 @@ label{
     }
  }
  .controls > label{
-  color: #130d06;
+  color: #000;
   font-size:16px;
  }
  ::-webkit-scrollbar {
@@ -159,14 +159,14 @@ label{
   -o-transition: margin-left 0.5s ease 0s;  
   background-color: #fdfdfd;
   padding: 20px;
-  border: 1px solid #130d06;
+  border: 1px solid #000;
   border-radius:5px;
   background-color: #211f1f;
   color: #fff;
 }
 .swipe-action, a.swipe-action:hover{
   text-decoration: none; 
-  color:#130d06; 
+  color:#000; 
   cursor: pointer;
   font-size: 15px;
 }
@@ -174,18 +174,18 @@ label{
   margin-top: 20px;
 }
 .panel-swipe {
-  border: 1px solid #130d06;
+  border: 1px solid #000;
 }
 .panel-swipe > .panel-heading {
   color: white;
-  background-color: #130d06;
+  background-color: #000;
 }
 .panel-swipe > .panel-body {
-  color:#130d06;
+  color:#000;
 }
 .panel-swipe > .panel-footer {
   color: white;
-  background-color: #130d06;
+  background-color: #000;
 }
 
 input[readonly]{
@@ -201,18 +201,18 @@ input[readonly]{
    height: 30%;
 }
 .side-nav{
-  background-color: #130d06 !important;
+  background-color: #000 !important;
   border:1px solid black;
   z-index: 10000 !important;
   position: relative;
 }
 .test{
   padding-top: 1000px;
-  background-color: #130d06 !important;
+  background-color: #000 !important;
 }
 .feed {
   position: absolute;
-  background-color: #130d06;
+  background-color: #000;
   margin-top:15%;
   width:  100%;
   height: 100%;
